--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
     <title>WeStar</title>
     <link rel="stylesheet" href="./static/css/framework7.ios.min.css">
     <link rel="stylesheet" href="./static/css/framework7.ios.colors.min.css">
+    <link rel="stylesheet" href="./static/css/weui.min.css">
+    <link rel="stylesheet" href="./static/css/wx.min.css">
+    <link rel="stylesheet" href="./static/css/ESS.css">
+    <link rel="stylesheet" href="./static/css/myCss.css">
   </head>
   <body>
-    <div id="app">
-    </div>
+    <div id="app"></div>
     <!-- built files will be auto injected -->
     <script type='text/javascript' src='./static/js/zepto.min.js' charset='utf-8'></script>
     <script type='text/javascript' src='./static/js/framework7.min.js' charset='utf-8'></script>
-    <script type="text/javascript">
-             var baseURL = window.location.href.substring(0,window.location.href.indexOf('index.html'))
-             localStorage.setItem("baseURL", baseURL);
-    </script>
   </body>
 </html>
